<resources>
    <string name="app_name">MyLink2018</string>
    <string name="title_activity_login">SmallBiz Login</string>
    <string name="title_broker_details">Broker Details</string>
    <string name="secret_key">changethisvalue!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="all_other_clients">All Clients</string>
    <string name="open_enrollment_in_progress">Open Enrollment In Progress</string>
    <string name="renewals_in_progress">Pending Renewals</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="welcome_html" formatted="false">
<![CDATA[
    <html>
        <STYLE type="text/css">
            BODY {
                color: #555555;
                margin: 0 0 0 0;
            }
            div.welcome{
                padding-top: .2cm;
                padding-bottom: .4cm;
                font-weight: 700;
                font-size: .55cm;
                text-align: center;
            }
            div.summary{
                font-weight: 500;
                font-size: .45cm;
                text-align: center;
            }
            span.employercount {
                color: #00a3e2;
            }
            span.attention {
                color: #f21f28;
            }
        </STYLE>
        <body>
            <div class="welcome">Welcome back, %s</div>
            <div class="summary">You have <span class="employercount">%s</span> clients</div>
            <div class="summary"><span class="attention">%s</span> requiring your immediate attention.</div>
        </body>
    </html>
]]>
    </string>
    <string name="welcome_message" formatted="false">Welcome Back, %s</string>
    <string name="welcome_summary" formatted="false">You have %s clients with %s requiring your immediate attention.</string>
    <string name="client">Client</string>
    <string name="employees_needed">Employees Needed</string>
    <string name="plan_year">Plan Year</string>
    <string name="days_left">DAYS LEFT</string>
    <string name="title_activity_client_details">ClientDetailsActivity</string>
    <string name="title_activity_employee_details">EmployeeDetailsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="carriers_menu_item">Carriers</string>
    <string name="logout_menu_item">Logout</string>
    <string name="participation_label">Participation</string>
    <string name="must_participate_label">Must Participate to Meet Minimum</string>
    <string name="enrolled_label">Enrolled</string>
    <string name="waived_label">Waived</string>
    <string name="not_completed_label">Not Completed</string>
    <string name="total_employees_label">Total Employees</string>
    <string name="open_enrollment_label">Open Enrollment</string>
    <string name="open_enrollment_begins_label_future">Open Enrollment Begins</string>
    <string name="open_enrollment_begins_label_past">Open Enrollment Began</string>
    <string name="open_enrollment_ends_label_future">Open Enrollment Closes</string>
    <string name="open_enrollment_ends_label_past">Open Enrollment Ended</string>
    <string name="days_left_label">Days Left</string>
    <string name="call_dc_healthlink">Call DC Health Link</string>
    <string name="email_dc_healthlink">Email DC Health Link</string>
    <string name="estimated_cost_label">Monthly Estimated Costs-</string>
    <string name="employer_contribution_label">Employer Contribution</string>
    <string name="employee_contribution_label">Employee Pays</string>
    <string name="total">Total</string>
    <string name="minimum_not_met">Open enrollment in progress &#8226; Minimum not met</string>
    <string name="minimum_met">Open enrollment in progress</string>
    <string name="in_coverage">In Coverage</string>
    <string name="coverage_info_label">Coverage Info</string>
    <string name="coverage_year" formatted="false">Coverage Year %1$s - %2$s</string>
    <string name="renewal_available_label">Renewal Available</string>
    <string name="next_coverage_year_begins_label">Next Coverage Year Begins</string>
    <string name="PhoneLabel">Phone</string>
    <string name="MobileLabel">Mobile</string>
    <string name="dismiss">Dismiss</string>
    <string name="cancel">cancel</string>
    <string name="no_emails">There are no email addresses available for this client</string>
    <string name="no_phone_numbers">No phone numbers available for this client.</string>
    <string name="no_addresses">No addresses available for this client.</string>
    <string name="no_mobile_phone_numbers">No mobile phone numbers are available for this client.</string>
    <string name="in_progress">In Progress</string>
    <string name="renewal_in_progress">Renewal Pending</string>
    <string name="renewal_deadlines">Renewal Deadlines</string>
    <string name="account_name">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember me</string>
    <string name="existing_customers">SmallBiz is for existing Health Link customers.</string>
    <string name="not_existing">If you are not an existing customer please sign up on your home computer.</string>
    <string name="sharedpreferencename">hbxbroker</string>
    <string name="shared_preference_account_name">accountname</string>
    <string name="shared_preference_password">password</string>
    <string name="shared_preference_session_id">session_id</string>
    <string name="shared_preference_remember_me">rememberme</string>
    <string name="logging_in">Logging in.</string>
    <string name="security_question">Security Question</string>
    <string name="ok">OK</string>
    <string name="hbxroot">-----BEGIN CERTIFICATE-----\nMIIFgTCCBGmgAwIBAgIJAPbkwARsy/snMA0GCSqGSIb3DQEBBQUAMIHaMQswCQYD\nVQQGEwJVUzEdMBsGA1UECBMURGlzdHJpY3Qgb2YgQ29sdW1iaWExEzARBgNVBAcT\nCldhc2hpbmd0b24xLTArBgNVBAoTJERDIEhlYWx0aCBCZW5lZml0IEV4Y2hhbmdl\nIEF1dGhvcml0eTEcMBoGA1UECxMTVGVjaG5vbG9neSBTZXJ2aWNlczEkMCIGA1UE\nAxMbRENIQlggQ2VydGlmaWNhdGUgQXV0aG9yaXR5MSQwIgYJKoZIhvcNAQkBFhVt\nYXR0LndpbGxpYW1zM0BkYy5nb3YwHhcNMTYwMTA4MTcyMzA2WhcNMjYwMTA1MTcy\nMzA2WjCB2jELMAkGA1UEBhMCVVMxHTAbBgNVBAgTFERpc3RyaWN0IG9mIENvbHVt\nYmlhMRMwEQYDVQQHEwpXYXNoaW5ndG9uMS0wKwYDVQQKEyREQyBIZWFsdGggQmVu\nZWZpdCBFeGNoYW5nZSBBdXRob3JpdHkxHDAaBgNVBAsTE1RlY2hub2xvZ3kgU2Vy\ndmljZXMxJDAiBgNVBAMTG0RDSEJYIENlcnRpZmljYXRlIEF1dGhvcml0eTEkMCIG\nCSqGSIb3DQEJARYVbWF0dC53aWxsaWFtczNAZGMuZ292MIIBIjANBgkqhkiG9w0B\nAQEFAAOCAQ8AMIIBCgKCAQEAxrtdZ3wNcHQ+iMpOG1veU0/FRYmP+Bcz4Ji1klXk\njcTLMpsrVE0hwXrb45lIXG6yb8LQuP1L6QeIJswcCnSFojm1uTFNnc8iW7mOE5Ev\nJIzDAbNvyCWByLXyZO4aKhjA9gYwyLdZ1vB4QEj9cvTGfnjPXmAnI/Rme5zDPZWn\n5wjb3TNJ7zB69EEOM+p/FL6/+4gZXZEb3UGnESSEqAaSQeGpB/TuH10pGjYLaHsa\nWNkBDJDMon5M4urXZ5hMdn1by02M4Pbdfx9yy7ULY+t0ntH5FD24edeq3+u78qMA\nbElTDlVUbvJrS/t5kGTZ5MNkjS0DBchPUrvHgEYWXdWM1wIDAQABo4IBRjCCAUIw\nHQYDVR0OBBYEFAGPrQ6vT8Wtx8BJ4hM1uCvUV43wMIIBEQYDVR0jBIIBCDCCAQSA\nFAGPrQ6vT8Wtx8BJ4hM1uCvUV43woYHgpIHdMIHaMQswCQYDVQQGEwJVUzEdMBsG\nA1UECBMURGlzdHJpY3Qgb2YgQ29sdW1iaWExEzARBgNVBAcTCldhc2hpbmd0b24x\nLTArBgNVBAoTJERDIEhlYWx0aCBCZW5lZml0IEV4Y2hhbmdlIEF1dGhvcml0eTEc\nMBoGA1UECxMTVGVjaG5vbG9neSBTZXJ2aWNlczEkMCIGA1UEAxMbRENIQlggQ2Vy\ndGlmaWNhdGUgQXV0aG9yaXR5MSQwIgYJKoZIhvcNAQkBFhVtYXR0LndpbGxpYW1z\nM0BkYy5nb3aCCQD25MAEbMv7JzAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBBQUA\nA4IBAQB/QV8016ZMKIivrYHjiPuJ1L4tbwNNqD6qHu787XXTAuOoYObnug6CNsqA\nvKz46NhwbOd0IaOwN2dMz8Vw/KQAb422d337o+VKMOtjflbul//coCCWCA56W6JE\nGPKoeDP+mQyM7SboiA4Hu5a9c9zD6oB3ea1Y0sftK/x0MjTelC8aMegNnKeg98pD\nYvl1rVShk56iWD1OucGqRQ7p1nHapIIO6hKFT2YCSpEgUJxmEhui9WMHGJfTPQ3M\nYWBFzuQGHf1ECvki6YOpHBitGtdp0vUTPk0uV0DVBgHhrVzUI5l++kJdyyI8a7Rc\nONijCyevM04LlV8sBJsbBRrK8HsX\n-----END CERTIFICATE-----</string>
    <string name="format_url_path_with_leading_slash" formatted="false">%s://%s:%d%s</string>
    <string name="format_url_path_without_leading_slash" formatted="false">%s://%s:%d/%s</string>
    <string name="NoPlanYearBeginDateMessagge">Not yet defined</string>
    <string name="dchbx_des_encryption_key">DCHBXBrokerApp</string>
    <string name="enable_fingerprint_login">Enable Fingerprint Login</string>
    <string name="info_tab_name">Info</string>
    <string name="roster_tab_name">Roster</string>
    <string name="costs_tab_name">Costs</string>
    <string name="plans_tab_name">Plans</string>
    <string name="participation">Participation</string>
    <string name="monthly_costs">Monthly Costs</string>
    <string name="renewal_group">renewal group</string>
    <string name="monthly_costs_group">monthly costs group</string>
    <string name="participation_group">participation group</string>
    <string name="not_enrolled_label">Not Enrolled</string>
    <string name="name_header">Name</string>
    <string name="status_header">Status</string>
    <string name="for_next_year_format">%s for next year</string>
    <string name="active_status_roster_filter_header">ACTIVE STATUS</string>
    <string name="terminated">Terminated</string>
    <string name="renewal_status_roster_filter_header">Renewal Status</string>
    <string name="employee_status_filter">Employee Status Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="no_filter_label">Show All</string>
    <string name="coverage_year_label">Coverage Year</string>
    <string name="details_group">details_group</string>
    <string name="details_drawer">Account Info</string>
    <string name="dob_field_format">DOB: %s</string>
    <string name="ssn_field_format">SSN: %s</string>
    <string name="hired_on_field_format">Hired On: %s</string>
    <string name="health_plan_drawer_label">Health Plan</string>
    <string name="dependents_drawer">Dependents</string>
    <string name="plan_name_field">Plan Name: %s</string>
    <string name="plan_selected_field">Plan Selected: %s</string>
    <string name="health_plan_group_tag">health_plan_group</string>
    <string name="premiums_label">Premium</string>
    <string name="plan_type_field" formatted="false">Plan Type: %s</string>
    <string name="metal_level_field">Metal Level: %s</string>
    <string name="unknown">Unknown</string>
    <string name="employer_header">Employer</string>
    <string name="employee_header">Employee</string>
    <string name="timeout_message">Your session will expire in %1d seconds. If you would like to remain logged in click \"Stay Logged In\" below.</string>
    <string name="session_security_title">Session Security</string>
    <string name="stay_logged_in">Stay Logged in</string>
    <string name="monthly_premium">Monthly Premium (Maximum)</string>
    <string name="plan_deductible_maximum">Plan Deductible (Maximum)</string>
    <string name="need_to_know_label">We need to know a bit more about you.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="continue_string">Continue</string>
    <string name="skip_this">Skip this. Show me plans.</string>
    <string name="choose_premium_and_deductible">Choose your maximum premium and deductible.</string>
</resources>