<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainbackgroundcolor"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:title="test title"
        android:background="@color/titlebar">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textViewCompanyName"
        android:text=""
        android:layout_below="@+id/toolbar"
        style="@style/Title"
    />
    <TextView
        android:id="@+id/textViewCompanyInOpenEnrollment"
        style="@style/Subtitle"
        android:text="@string/all_other_clients"
        android:layout_below="@id/textViewCompanyName"
    />
    <LinearLayout
        android:id="@+id/action_buttons_row"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCompanyInOpenEnrollment"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" >
        <ImageButton
            android:id="@+id/imageButtonPhone"
            android:src="@drawable/phoneicon"
            style="@style/IconButton" />

        <ImageButton
            android:id="@+id/imageButtonChat"
            android:src="@drawable/emailicon"
            style="@style/IconButton" />

        <ImageButton
            android:id="@+id/imageButtonLocation"
            android:src="@drawable/locationicon"
            style="@style/IconButton" />

        <ImageButton
            android:id="@+id/imageButtonEmail"
            android:src="@drawable/messageicon"
            style="@style/IconButton" />
    </LinearLayout>
    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action_buttons_row"
        android:layout_alignParentBottom="true"
        tools:context="gov.dc.broker.ClientDetailsActivity"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textViewMonthlyEstimatedCost"
                style="@style/BrokerClientHeader"
                android:text="@string/estimated_cost_label"
                android:layout_alignParentTop="true"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/textViewEmployerContributionLabel"
                style="@style/BrokerClientLabel"
                android:layout_below="@id/textViewMonthlyEstimatedCost"
                android:layout_toLeftOf="@+id/textViewEmployerContribution"
                android:text="@string/employer_contribution_label"
                />
            <TextView
                android:id="@+id/textViewEmployerContribution"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewEmployerContributionLabel"
                android:text=""
                />
            <TextView
                android:id="@+id/textViewEmployeeContributionLabel"
                style="@style/BrokerClientLabel"
                android:layout_below="@id/textViewEmployerContributionLabel"
                android:layout_toLeftOf="@+id/textViewEmployeeContribution"
                android:text="@string/employee_contribution_label"
                />

            <TextView
                android:id="@+id/textViewEmployeeContribution"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewEmployeeContributionLabel"
                android:text=""
                />
            <TextView
                android:id="@+id/textViewTotalLabel"
                style="@style/CapitalizedLabel"
                android:layout_below="@id/textViewEmployeeContributionLabel"
                android:layout_toLeftOf="@+id/textViewTotal"
                android:text="@string/total"
                />
            <TextView
                android:id="@+id/textViewTotal"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewTotalLabel"
                android:text=""
                />
            <View
                android:id="@+id/viewParticipationSeparator"
                style="@style/Separator"
                android:layout_below="@id/textViewTotalLabel"
                />
            <TextView
                android:id="@+id/textViewParticipationLabel"
                style="@style/BrokerClientHeader"
                android:layout_below="@id/viewParticipationSeparator"
                android:gravity="center"
                android:text="@string/participation_label"
                />
            <TextView
                android:id="@+id/textViewEnrolledLabel"
                style="@style/BrokerClientLabel"
                android:layout_below="@id/textViewParticipationLabel"
                android:layout_toLeftOf="@+id/textViewEnrolled"
                android:text="@string/enrolled_label"
                />
            <TextView
                android:id="@+id/textViewEnrolled"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewEnrolledLabel"
                android:text=""
                />
            <TextView
                android:id="@+id/textViewWaivedLabel"
                style="@style/BrokerClientLabel"
                android:layout_below="@id/textViewEnrolledLabel"
                android:layout_toLeftOf="@+id/textViewWaived"
                android:text="@string/waived_label"
                />
            <TextView
                android:id="@+id/textViewWaived"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewWaivedLabel"
                android:text=""
                />
            <TextView
                android:id="@+id/textViewNotCompletedLabel"
                style="@style/BrokerClientLabel"
                android:layout_below="@id/textViewWaivedLabel"
                android:layout_toLeftOf="@+id/textViewNotCompleted"
                android:text="@string/not_completed_label"
                />
            <TextView
                android:id="@+id/textViewNotCompleted"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewNotCompletedLabel"
                android:text=""
                />
            <TextView
                android:id="@+id/textViewTotalEmployeesLabel"
                style="@style/CapitalizedLabel"
                android:layout_below="@id/textViewNotCompletedLabel"
                android:layout_toLeftOf="@+id/textViewTotalEmployees"
                android:text="@string/total_employees_label"
                />
            <TextView
                android:id="@+id/textViewTotalEmployees"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewTotalEmployeesLabel"
                android:text=""
                />
            <View
                android:id="@+id/viewCoverageInfoSeparator"
                style="@style/Separator"
                android:layout_below="@id/textViewTotalEmployees"
                />
            <TextView
                android:id="@+id/textViewCoverageInfoLabel"
                style="@style/BrokerClientHeader"
                android:layout_below="@id/viewCoverageInfoSeparator"
                android:gravity="center"
                android:text="@string/coverage_info_label"
                />
            <TextView
                android:id="@+id/textViewCoverageInfoSubheadingLabel"
                style="@style/BrokerClientSubheading"
                android:layout_below="@id/textViewCoverageInfoLabel"
                android:gravity="center"
                android:text="@string/coverage_year"
                />
            <TextView
                android:id="@+id/textViewRenewalAvailableLabel"
                style="@style/BrokerClientLabel"
                android:layout_below="@id/textViewCoverageInfoSubheadingLabel"
                android:layout_toLeftOf="@+id/textViewRenewalAvailable"
                android:keepScreenOn="true"
                android:text="@string/renewal_available_label"
                />
            <TextView
                android:id="@+id/textViewRenewalAvailable"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewRenewalAvailableLabel"
                android:text=""
                />
            <TextView
                android:id="@+id/textViewNextCoverageYearBeginsLabel"
                style="@style/BrokerClientLabel"
                android:layout_below="@id/textViewRenewalAvailableLabel"
                android:layout_toLeftOf="@+id/textViewNextCoverageYearBegins"
                android:keepScreenOn="true"
                android:text="@string/next_coverage_year_begins_label"
                />
            <TextView
                android:id="@+id/textViewNextCoverageYearBegins"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewNextCoverageYearBeginsLabel"
                android:text=""
                />
            <TextView
                android:id="@+id/textViewOpenEnrollmentEndsLabel"
                style="@style/BrokerClientLabel"
                android:layout_below="@id/textViewNextCoverageYearBeginsLabel"
                android:layout_toLeftOf="@+id/textViewOpenEnrollmentEnds"
                android:keepScreenOn="true"
                android:text="@string/open_enrollment_ends_label_future"
                />
            <TextView
                android:id="@+id/textViewOpenEnrollmentEnds"
                style="@style/BrokerClientField"
                android:layout_alignTop="@id/textViewOpenEnrollmentEndsLabel"
                android:text=""
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>