<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightgray"
    android:tag="@+id/view_type">

    <TextView
        android:id="@+id/textViewCompanyNameLabel"
        style="@style/TextColumnHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textViewEmployeesNeededLabel"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        />
    <TextView
        android:id="@+id/textViewEmployeesNeededLabel"
        style="@style/TextColumnHeaderStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/employees_needed"
        android:gravity="center"
        android:layout_alignTop="@+id/textViewCompanyNameLabel"
        android:layout_alignBottom="@+id/textViewCompanyNameLabel"
        android:layout_toStartOf="@+id/textViewDaysLeftLabel"
        android:layout_toLeftOf="@+id/textViewDaysLeftLabel" />
    <TextView
        android:id="@+id/textViewDaysLeftLabel"
        style="@style/TextColumnHeaderStyle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/days_left"
        android:layout_marginRight="23dp"
        android:gravity="center"
        android:layout_alignTop="@+id/textViewCompanyNameLabel"
        android:layout_alignBottom="@+id/textViewCompanyNameLabel"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingRight="0dp"
        android:layout_alignParentRight="true" />
</RelativeLayout>